Group findings by module/type/description/recommendation in reports
Reports with many affected endpoints (e.g. 25 MISSING_RATE_LIMITING
findings, one per endpoint) repeated the same description and
recommendation text once per endpoint, and findingsByModule duplicated
the entire findings list a second time grouped by module - together
making reports far longer than the actual information they carry.

findings is now a list of FindingGroup, one entry per distinct
(module, type, description, recommendation) combination, each holding
a list of FindingOccurrence for the fields that differ per endpoint
(id, severity, endpointUrl, method, parameter, payload, evidence).
findingsByModule is removed entirely - redundant with grouping by
module via the same mechanism. summary.countsByType/countsBySeverity
are unchanged: they still count every individual occurrence.